xfsprogs-2.5.2 (25 June 2003)
	- Fix xvm stripe detection in libdisk - pass correctly
	  sized structures to xvm ioctls.

xfsprogs-2.5.1 (23 June 2003)
	- Fix libdisk device driver (volume managers) detection code
	  used by mkfs, so that drivers with multiple majors are not
	  incorrectly processed.

xfsprogs-2.5.0 (18 June 2003)
	- Fix libdisk (and hence mkfs) code which warns on MD devices
	  with the clean flag not set, apparently this is not so wise.
	- Fix libxfs_device_zero to work with smaller-than-requested
	  write return values.
	- Fix error in xfs_io pwrite code with large request sizes.
	- Fix rounding-down-input problems in several xfs_io commands.
	- Changed mkfs.xfs default log size scaling algorithm slightly,
	  to create larger logs at smaller filesystem sizes by default
	  (thanks to Andi Kleen for the patch).
	- Enable support for sector sizes larger than 512 bytes.

xfsprogs-2.4.12 (02 June 2003)
	- Fix xfs_logprint handling of any version 2 log device.
	- Remove calls to exit in libhandle, propogate errors to
	  caller, and bumped libhandle version from 1.0.1 to 1.0.2.

xfsprogs-2.4.11 (30 May 2003)
	- Extract device sector size at mkfs time and issue warnings
	  if the requested filesystem sector size is too small.
	- Sync up user/kernel source in libxfs, libxlog and headers.
	- Skip realtime initialisation in libxfs mount path if the
	  caller is xfs_db, otherwise we get nonsense warnings.
	- Update xfs_io with a couple of additional commands.
	- Fix xfs_logprint handling of corrupt v2 log devices.

xfsprogs-2.4.10 (12 May 2003)
	- Fix a bug in mkfs - creating version 2 logs, an incorrect
	  stripe unit value was being passed to libxfs_clear_log.
	  All recent versions of xfs_repair will fix this, however,
	  because xfs_repair uses the correct stripe unit value.
	- Fix a bug in xfs_logprint, when dumping a corrupt log.
	- FreeBSD updates from Alexander Kabaev.
	- Large sector size updates for mkfs (disabled at the moment).