@@ -38,6 +38,9 @@ AC_ARG_ENABLE(shared-uuid,
 AC_PACKAGE_CHECK_LIBUUID
 AC_SUBST(libuuid)
 
+AC_PACKAGE_NEED_PTHREAD_H
+AC_PACKAGE_NEED_PTHREADMUTEXINIT
+
 AC_TYPE_PSINT
 AC_TYPE_PSUNSIGNED
 AC_SIZEOF_POINTERS_AND_LONG
