@@ -36,6 +36,7 @@ include $(TOPDIR)/include/builddefs
 LSRCFILES = \
 	manual_format.m4 \
 	package_globals.m4 \
+	package_pthread.m4 \
 	package_types.m4 \
 	package_utilies.m4 \
 	package_uuiddev.m4
